--- a/cc-rs/Cargo.toml
+++ b/cc-rs/Cargo.toml
@@ -6,10 +6,17 @@ edition = "2021"
 [dependencies]
 bevy = "0.7"
 bevy-inspector-egui = "0.11"
+
 num-traits = "0.2.15"
+
 toml = "0.5"
 serde = { version = "1.0", features = ["derive"] }
 snafu = "0.7"
+
+anyhow = "1.0.4"
+# Note:
+# Bevy 0.7 has implicit dependency on anyhow, remove it someday
+# https://github.com/bevyengine/bevy/issues/3138
 
 [profile.dev]
 opt-level = 1
