--- a/cc-rs/Cargo.toml
+++ b/cc-rs/Cargo.toml
@@ -4,18 +4,20 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+# Bery and some plugins
 bevy = "0.7"
+iyes_loopless = "0.5"
 bevy-inspector-egui = "0.11"
 
+# Extra utilities
 num-traits = "0.2.15"
-
 toml = "0.5"
 serde = { version = "1.0", features = ["derive"] }
 snafu = "0.7"
 
+# Exception
 anyhow = "1.0.4"
-# Note:
-# Bevy 0.7 has implicit dependency on anyhow, remove it someday
+# Note: Bevy 0.7 has implicit dependency on anyhow, remove it someday
 # https://github.com/bevyengine/bevy/issues/3138
 
 [profile.dev]
