feat: add more levels

--- a/cc-bevy/assets/level/index.toml
+++ b/cc-bevy/assets/level/index.toml
@@ -1,6 +1,8 @@
 directory = 'level'
 extension = 'level.toml'
 name_list = [
-  'exp',
+  # 'exp',
+  # 'introduction',
+  # 'red_and_blue_cubes',
   'tetris',
 ]
