feat: merge .toml and .level.toml loaders

--- a/cc-bevy/assets/level/index.toml
+++ b/cc-bevy/assets/level/index.toml
@@ -1,8 +1,7 @@
 directory = 'level'
-extension = 'level.toml'
+extension = 'toml'
 name_list = [
   'exp',
   'introduction',
-  'red_and_blue_cubes',
-  'tetris',
+  'swap', # 'tetris',
 ]
