--- a/cc-bevy/assets/level/swap.toml
+++ b/cc-bevy/assets/level/swap.toml
@@ -1,11 +1,11 @@
 [map]
 raw = '''
-R~~~~~~~~~~~~~~~~~~~~~~
-|                     |
-| x        B        G |
-|                     |
-|~~~~~~~~~~~~~~~~~~~~~|'''
+W~~~~~~~~~~~~~~~~
+|               |
+|~xGxW     WGxGW/
+|               |
+|~~~~~~~~~~~~~~~|'''
 
 [info]
 author = "w"
-title = "Introduction"
+title = "Swap"
