refactor: flatten modules

--- a/cc-bevy/assets/level/index.toml
+++ b/cc-bevy/assets/level/index.toml
@@ -1,7 +1,7 @@
 directory = 'level'
 extension = 'toml'
 name_list = [
-  'experiment',
+  # 'experiment',
   'introduction',
   'a_moth_to_flame',
   'detour',
