fix: move profiles to workspace's toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,9 @@
 [workspace]
 members = ["cc-bevy", "cc-core"] 
 resolver = "2" # for wgpu/Bevy
+
+[profile.dev]
+opt-level = 1
+
+[profile.dev.package."*"]
+opt-level = 3
