--- a/cc-bevy/assets/level/matrix.toml
+++ b/cc-bevy/assets/level/matrix.toml
@@ -1,18 +1,16 @@
 [map]
 raw = '''
-W~~~~~~~~~~~~
-|x         x|
-| W W W W W |
-|           |
-| W W W W W |
-|    GGG    |
-| W WGWGW W |
-|    GGG    |
-| W W W W W |
-|           |
-| W W W W W |
-|x         x|
-|~~~~~~~~~~~|'''
+x         x
+ W W W W W
+
+ W W W W W
+    GGG
+ W WGWGW W
+    GGG
+ W W W W W
+
+ W W W W W
+x         x'''
 
 [info]
 author = "w"
