--- a/cc-bevy/assets/level/experiment.toml
+++ b/cc-bevy/assets/level/experiment.toml
@@ -1,35 +1,34 @@
 [map]
-raw = '''W~~~~~~~~~~~~~~~~~~~~
-|                   |
-| R R               |
-|        R      B   |
-| B B B    B B R R  |
-|  R   B R  B   B   |
-|  |                |
-| B B  R G B~ B     |
-| |     B  | R      |
-|          |        |
-|          |~ R     |
-| x                 |
-|~~~~~~~~~~~~~~~~~~~~'''
+raw = '''
+   W
+ R R
+        R      B
+ B B B    B B R R
+  R   B R  B   B  W
+  |
+ B B  R G B~ B
+ |     B  | R
+          |
+          |~ R
+Wx                 '''
 
 [[map.commands]]
-binding = [[9, 5], [12, 5], [16, 5], [7, 5], [8, 8], [13, 8]]
+binding = [[8, 4], [11, 4], [15, 4], [6, 4], [7, 7], [12, 7]]
 content = "U"
 looping = true
 
 [[map.commands]]
-binding = [[9, 3], [16, 3], [3, 5]]
+binding = [[8, 2], [15, 2], [2, 4]]
 content = "D"
 looping = true
 
 [[map.commands]]
-binding = [[4, 2], [4, 4], [4, 7], [13, 4], [17, 4], [9, 7], [14, 7], [14, 7], [14, 10]]
+binding = [[3, 1], [3, 3], [3, 6], [12, 3], [16, 3], [8, 6], [13, 6], [13, 6], [13, 9]]
 content = "L"
 looping = true
 
 [[map.commands]]
-binding = [[2, 2], [2, 4], [6, 4], [11, 4], [15, 4], [2, 7], [7, 7], [11, 7]]
+binding = [[1, 1], [1, 3], [5, 3], [10, 3], [14, 3], [1, 6], [6, 6], [10, 6]]
 content = "R"
 looping = true
 
