--- a/cc-bevy/assets/level/swap.toml
+++ b/cc-bevy/assets/level/swap.toml
@@ -1,10 +1,8 @@
 [map]
 raw = '''
-W~~~~~~~~~~~~~~~~
-|               |
-|~xGxW     WGxGW/
-|               |
-|~~~~~~~~~~~~~~~|'''
+
+WxGxW     WGxGW
+               '''
 
 [info]
 author = "w"
