--- a/cube-core/Cargo.toml
+++ b/cube-core/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "cc-core"
-version = "0.1.0"
 edition = "2021"
+name = "cube-core"
+version = "0.1.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
