--- a/cube-collection/assets/level/debug.toml
+++ b/cube-collection/assets/level/debug.toml
@@ -3,9 +3,9 @@ raw = '''
    W
  R R
         R      B
- B B B    B B R R
-  R   B R  B   B  W
-  |
+ W B B    B B R R
+      B R  B   B  W
+  R
  B B  R G B- B
  |     B  | R
           |
@@ -18,7 +18,7 @@ content = "U"
 looping = true
 
 [[map.commands]]
-binding = [[8, 2], [15, 2], [2, 4]]
+binding = [[8, 2], [15, 2], [2, 5]]
 content = "D"
 looping = true
 
@@ -34,4 +34,4 @@ looping = true
 
 [info]
 author = "w"
-title = "Experiment"
+title = "Debug Tests"
