fix: solve a circular dependency problem

--- a/cube-collection/assets/level/index.toml
+++ b/cube-collection/assets/level/index.toml
@@ -1,6 +1,7 @@
 directory = 'level'
 extension = 'toml'
 name_list = [
+  # 'debug-circular-dependency',
   # 'debug-slap',
   # 'debug-general',
   # 'experiment',
