--- a/cube-collection/assets/level/matrix.toml
+++ b/cube-collection/assets/level/matrix.toml
@@ -1,16 +1,12 @@
 [map]
 raw = '''
-x         x
- W W W W W
-
- W W W W W
-    GGG
- W WGWGW W
-    GGG
- W W W W W
-
- W W W W W
-x         x'''
+x     x
+ W W W
+  GGG
+ WGWGW
+  GGG
+ W W W
+x     x'''
 
 [info]
 author = "w"
