refactor: a new level and simplify some levels

--- a/cube-collection/assets/level/index.toml
+++ b/cube-collection/assets/level/index.toml
@@ -7,16 +7,17 @@ name_list = [
   # 'debug-general',
   # 'experiment',
   'introduction',
-  'a-moth-to-flame',
+  'rotation',
+  'merge',
   'detour',
   'tetris',
-  'moving-together',
-  'haircut',
   'matrix',
-  'moving-forest',
+  'haircut',
   'printer',
-  'swap',
+  'moving-together',
+  'moving-forest',
   'centrosymmetry-and-axisymmetry',
+  'swap',
   'sacrifice',
   'reincarnation',
   'triangle-power',
