--- a/cube-collection/Cargo.toml
+++ b/cube-collection/Cargo.toml
@@ -1,17 +1,20 @@
 [package]
 edition = "2021"
 name = "cube-collection"
-version = "0.3.11"
+version = "0.4.11"
 
 [dependencies]
 # Local workspace
 cube-core = {path = "../cube-core"}
 
 # Bery and its plugins
-bevy = "0.11.2"
+# bevy = "0.12"
+# bevy_prototype_lyon = "0.10"
+bevy = "0.11"
 bevy_prototype_lyon = "0.9"
 
 # Extra utilities
+anyhow = "1.0"
 serde = {version = "1.0", features = ["derive"]}
 snafu = "0.7"
-toml = "0.5"
+toml = "0.8"
